<resources>
    <string name="app_name">Vetra Track</string>
    <string name="login">Giriş Yap</string>
    <string name="login_header">Giriş</string>
    <string name="project_name">Vetra Araç Takip Sistemi</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="fullName">Ad Soyad</string>
    <string name="pasword">Parola</string>
    <string name="register">Kayıt Ol</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_menu_main">menu_main</string>
    <string name="title_home">Home</string>
    <string name="title_list">List</string>
    <string name="title_report">Report</string>
    <string name="title_activity">Activity</string>
    <string name="title_about">About</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>