<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/title_list" />
    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/ic_insert_drive_file_black_24dp"
        android:title="@string/title_report" />

    <item
        android:id="@+id/navigation_activity"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_activity" />

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_about" />

</menu>
