<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingTop="150dp"
        android:background="#000000"
        tools:context="cf.vetratrack.vetratrack.RegisterScreen">

    <TextView
        android:id="@+id/tv_R_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:text="@string/login_header"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_R_explanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"
        android:layout_below="@id/tv_R_register"
        android:text="@string/project_name"
        android:textAlignment="center"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/et_R_username"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="7dp"
        android:layout_below="@id/tv_R_explanation"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/username"
        android:paddingLeft="20dp" />

    <EditText
        android:id="@+id/et_R_email"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="7dp"
        android:layout_below="@id/et_R_username"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:paddingLeft="20dp" />

    <EditText
        android:id="@+id/et_R_password"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/et_R_email"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/pasword"
        android:inputType="textPassword"
        android:paddingLeft="20dp" />

    <Button
        android:id="@+id/btn_R_register"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="7dp"
        android:layout_below="@+id/et_R_password"
        android:background="@drawable/rounded_editbutton"
        android:text="@string/register"/>

    <Button
            android:id="@+id/btn_R_login"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/btn_R_register"
            android:background="@android:color/transparent"
            android:text="@string/login"
            android:textColor="#ffffff" />

</RelativeLayout>

